(Added more stuff): yes

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 
                 <a href="#">Text</a>
                 <a href="#">Text</a>
-                <a href="#">Text</a>
-                <a href="#">Text</a>
+                <a href="#">Guestbook</a>
+                <hr>
+                <a href="#">More info.</a>
+                <a href="./credits.html">Credits</a>
             </section>
         </div>
 
@@ -67,22 +69,35 @@
 
             <section style="--fg: #17ee82; --bg: #0E7F4F ">
                 <h1>About me</h1>
-                <p>Hello!</p>
-                <a href="#" style="margin-left: 90%;">Credits</a>
+                <p>Hello! Welcome to my personal page. I'm blooshy, an aspiring dev/artist who likes video games and other stuff.</p>
+                <p>If there's any issues with the website please go complain to me (b ᵔ▿ᵔ)b.</p>
+                <br>
+                <img alt="Someone greeting you." src="./images/welcome.png">
+                <br>
+                <p>(Also sorry for any mobile users this shit wasn't made with you in mind)</p>
             </section>
 
             <div class="thethree">
 
-                <section style="--fg: #17e0ee; --bg: #0e777f " class="tres">
-                    <p>shoes</p>
+                <section style="--fg: #17e0ee; --bg: #0a5a8f " class="tres">
+                    <h2>Socials</h2>
+                    <p>Meant for professional stuff mostly.</p>
+                    <a href="https://github.com/Blooshysaur">Github</a>
+                    <br>
+                    <a>E-mail</a>
+                    <hr>
+                    <p>Please note below they are personal space, please don't bother me or anything.</p>
+                    <a>neopets</a>
                 </section>
 
-                <section style="--fg: #ee1717; --bg: #992525 " class="tres">
-                    <p>dirt </p>
+                <section style="--fg: #ee1717; --bg: #a60c54 " class="tres">
+                    <h2>Projects</h2>
+                    <p>Stuff I've done over time, whether it's serious or not.</p> 
                 </section>
 
-                <section style="--fg: #17ee82; --bg: #0E7F4F " class="tres">
-                    <p>sand</p>
+                <section style="--fg: #f56ecc; --bg: #9d21bf " class="tres">
+                    <h2>Blog</h2>
+                    <p>I post random shit in there.</p>
                 </section>
         </div> 
         
