--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 
                 <section style="--fg: #17e0ee; --bg: #0a5a8f " class="tres">
                     <h2>Socials</h2>
+                    <p>For contacting me.</p>
+                    <br>
                     <p>Meant for professional stuff mostly.</p>
                     <a href="https://github.com/Blooshysaur">Github</a>
                     <br>
