(added stuff): yep

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>this is a page.</h1>
     <body>
         <div class="container"> <!-- beginning of sky-->
-            <p>text</p>
+            <p>Why is this text still there? It has like no purpose currently like it's litteraly just a leftover from testing</p>
             <div class="sky">
      
             <!-- We are making divisions, every div.
@@ -36,7 +36,7 @@
                     b[n++]="OW! Shit!"
                     b[n++]="I'm supposed to study for exams by the way."
                     b[n++]="Eek!"
-                    b[n++]="Funding for-by-by-made possible by viewers like you. like you. like you. like you. like you. lik-"
+                    b[n++]="Funding for-by-by-made possible by viewers like you. like you. like you. like you."
                     b[n++]="BAH! How scary! => https://en.wikipedia.org/wiki/Ghost"
                     b[n++]="I eat sand"
                     b[n++]="vivid/stasis - #6 🎧 🟥🟩⬛️⬛️⬛️"
@@ -49,20 +49,27 @@
                      document.write( b[i] )
                    </script>
         </h2></center></i>
+        <center><h3 style="color:orangered">This website is currenly under construction, please wait warmly. (；￣Д￣)</h3></center>
         <br>
         <br>
-        <div class="floating sidenav "> <!-- side nav -->
-
-            <section style="--fg: #f0f8ff; --bg: #808080 ">
+        <div class="floating sidenav " > <!-- side nav -->
+            <section style="--fg: #f0f8ff; --bg: #808080; width:33%; margin-right: 5%; margin-left: auto;">
                 <h1 style="color: var(--fg)">Menu</h1>
 
-                <a href="#">Text</a>
-                <a href="#">Text</a>
-                <a href="#">Guestbook</a>
+            </section>
+            <section style="--fg: #f0f8ff; --bg: #808080;">
+
+                <a href="/index.html">Home</a>
+                <a href="#">Archive</a>
+                <a href="https://blooshy.atabook.org/">Guestbook</a>
                 <hr>
                 <a href="#">More info.</a>
-                <a href="./credits.html">Credits</a>
+                <a href="/credits.html">Credits</a>
             </section>
+            <center>
+                <img src="/images/nQ75syT.jpeg" alt="cat in toilet" style="width:60%; height: 60%;">
+                <p>what if i flushed the cat</p>
+            </center>
         </div>
 
         <div class="main">
@@ -79,17 +86,20 @@
 
             <div class="thethree">
 
-                <section style="--fg: #17e0ee; --bg: #0a5a8f " class="tres">
+                <section style="--fg: #17e0ee; --bg: #0a5a8f; display: flex; flex-direction: column;" class="tres">
                     <h2>Socials</h2>
                     <p>For contacting me.</p>
                     <br>
-                    <p>Meant for professional stuff mostly.</p>
-                    <a href="https://github.com/Blooshysaur">Github</a>
-                    <br>
-                    <a>E-mail</a>
-                    <hr>
-                    <p>Please note below they are personal space, please don't bother me or anything.</p>
-                    <a>neopets</a>
+                        <b><p>Meant for professional stuff mostly.</p></b>
+                    
+                        <a href="https://github.com/Blooshysaur">Github</a>
+                        <a>E-mail</a>
+                        <hr style="opacity: 0;"> <!-- Unoptimized as shit but who tf cares-->
+                        <hr style="opacity: 0;"> 
+                        <b><p>Personal spaces</p></b>
+                        <a>neopets (i dont have neopets)</a>
+                        <a href="https://twitter.com/blooshythethird">twitter</a>
+
                 </section>
 
                 <section style="--fg: #ee1717; --bg: #a60c54 " class="tres">
