--- a/credits.html
+++ b/credits.html
@@ -9,12 +9,12 @@
     <section style="--fg: #f0f8ff; --bg: #808080 ">
         <a href="./index.html">Return to homepage</a>
         <h1>Credits</h1>
-        <p>Code I used from</p>
         <ul>
-            <li><a href="https://osk.sh/">osk</a> for the boxes</li>
-            <li><a href="https://www.geeksforgeeks.org/how-to-create-shooting-star-animation-effect-using-css/">Geeks for Geeks</a> for the shooting stars.</li>
-            <li><a href="https://www.mariokart64.com/mkds/">The Mario Kart DS Players' Page's homepage</a> for the code of the random title</li>
-            <li><a href="https://www.htmlcommentbox.com/">HTML Comment Box</a>: Service I currently use for the Guestbook.</li>
+            <li><a href="https://osk.sh/">osk</a>: the boxes and other stuff</li>
+            <li><a href="https://www.w3schools.com/">w3schools</a>: a lot of things</li>
+            <li><a href="https://www.geeksforgeeks.org/how-to-create-shooting-star-animation-effect-using-css/">Geeks for Geeks</a>: shooting stars animation.</li>
+            <li><a href="https://se-made.com/">System Erasure's homepage</a>: code of the random message</li>
+            <li><a href="https://atabook.org/">Atabook</a>: Service I currently use for the Guestbook.</li>
         </ul>
 
     </section>
