(added stuff): hm
also removed unnecessary js file

--- a/credits.html
+++ b/credits.html
@@ -15,6 +15,7 @@
             <li><a href="https://www.geeksforgeeks.org/how-to-create-shooting-star-animation-effect-using-css/">Geeks for Geeks</a>: shooting stars animation.</li>
             <li><a href="https://se-made.com/">System Erasure's homepage</a>: code of the random message</li>
             <li><a href="https://atabook.org/">Atabook</a>: Service I currently use for the Guestbook.</li>
+            <li><a href="http://www.dynamicdrive.com/">DynamicDrive</a>: code for current time display</li>
         </ul>
 
     </section>
