--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="/scripts/moment.min.js"></script>
   <script src="scripts/moment-timezone-with-data.min.js"></script>
 
+
   <script type="text/javascript">
 
     /***********************************************
@@ -35,9 +36,7 @@
 
 </head> 
 <body>
-
     <h1>this is a page.</h1>
-    <body>
         <div class="container"> <!-- beginning of sky-->
             <p>Why is this text still there? It has like no purpose currently like it's litteraly just a leftover from testing</p>
             <div class="sky">
@@ -53,6 +52,7 @@
             <div class="star"></div>
             </div>
         </div> <!-- end of the sky-->
+        <div id="particle-container">
         <center><i><h2 class="floating">
             <script language="Javascript">
                 function banner() { } ; b = new banner() ; n = 0
@@ -147,18 +147,19 @@
                     <h2>Blog</h2>
                     <p>I post random shit in there.</p>
                 </section>
-        </div> 
-        
-        </div><!-- end of main -->
+            </div> <!--the three-->
+        </div> <!--main-->
 
-        </div>
+        
         <br> <!--debug-->
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-   
+
+        <script src="scripts/script.js"></script>
         <center>
             <img src="/images/nQ75syT.jpeg" alt="cat in toilet" style="width:60%; height: 60%;">
             <p>what if i flushed the cat</p>
         </center>
+    </div> <!--particle-->
 </body>
 </html>
